--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,20 @@ project(word_c2)
 
 set(CMAKE_CXX_STANDARD 14)
 find_package(Threads REQUIRED)
-add_executable(word_c2 main.cpp)
+set (SOURCES
+        main.cpp
+
+        maps.cpp
+        maps.h
+        queue.cpp
+        queue.h
+        threads_merge.cpp
+        threads_merge.h
+        time_measurement.cpp
+        time_measurement.h
+)
+
+add_executable(word_c2 ${SOURCES})
 #add_executable(word_c2_q main.cpp queue.cpp)
 
 target_link_libraries(word_c2 Threads::Threads)
