--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,14 +3,24 @@ project(word_c2)
 
 set(CMAKE_CXX_STANDARD 14)
 find_package(Threads REQUIRED)
-find_package(libzipstatic REQUIRED)
+
+set(LibZip_LIBRARIES "")
+include(CheckLibraryExists)
+SET(LibZip_LIBRARY_PATH "")
+check_library_exists(zip zip_open_from_source
+        "${LibZip_LIBRARY_PATH}" LibZip_FOUND)
+if(LibZip_FOUND)
+    message("Found LibZip")
+    list(APPEND LibZip_LIBRARIES "zip" )
+    link_directories(${LibZip_LIBRARY_PATH})
+endif()
+
 file (GLOB SOURCES
         main.cpp
 
+        lib
         queue.cpp
         queue.h
-        threads_merge.cpp
-        threads_merge.h
         time_measurement.cpp
         time_measurement.h
         file_of_vecs.h
@@ -21,4 +31,5 @@ add_executable(word_c2 ${SOURCES})
 #add_executable(word_c2_q main.cpp queue.cpp)
 
 target_link_libraries(word_c2 Threads::Threads)
-target_link_libraries(word_c2 libzipstatic)
+target_link_libraries(word_c2  ${LibZip_LIBRARIES})
+
